maj du pom.xml
svn path=/java/trunk/; revision=3677