@@ -7,6 +7,161 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>hectorTest</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+	<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
+    <maven-source-plugin.version>2.1.2</maven-source-plugin.version>
+    <maven-resources-plugin.version>2.5</maven-resources-plugin.version>
+    <maven-javadoc-plugin.version>2.8.1</maven-javadoc-plugin.version>
+    <sonar-maven-plugin.version>1.0-beta-2</sonar-maven-plugin.version>
+    <maven-release-plugin.version>2.2.1</maven-release-plugin.version>
+    <maven-pmd-plugin.version>2.5</maven-pmd-plugin.version>
+    <maven-shade-plugin.version>1.4</maven-shade-plugin.version>
+    <maven-antrun-plugin.version>1.6</maven-antrun-plugin.version>
+    <maven-assembly-plugin.version>2.2.2</maven-assembly-plugin.version>
+    <maven-surefire-plugin.version>2.12</maven-surefire-plugin.version>
+    <maven-replacer-plugin.version>1.3.6</maven-replacer-plugin.version>
+
+  </properties>
+  
+  <build>
+      <plugins>
+
+         <!--
+            On spécifie la version du JDK et l'encodage de caractères
+            des sources
+         -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
+            <configuration>
+               <source>1.6</source>
+               <target>1.6</target>
+               <encoding>UTF-8</encoding>
+            </configuration>
+         </plugin>
+
+
+         <!--
+            Dans le cas d'un packaging JAR, on demande que le JAR des
+            sources soit également généré
+         -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>${maven-source-plugin.version}</version>
+            <executions>
+               <execution>
+                  <id>bind-sources</id>
+                  <goals>
+                     <goal>jar</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+
+
+         <!--
+            On spécifie l'encodage de caractères des ressources
+         -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>${maven-resources-plugin.version}</version>
+            <configuration>
+               <encoding>UTF-8</encoding>
+            </configuration>
+         </plugin>
+
+
+         <!--
+         On demande la génération de la Javadoc
+         -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>${maven-javadoc-plugin.version}</version>
+            <executions>
+               <execution>
+                  <id>attach-javadocs</id>
+                  <goals>
+                     <goal>jar</goal>
+                  </goals>
+               </execution>
+            </executions>
+            <configuration>
+               <quiet>true</quiet>
+            </configuration>
+         </plugin>
+
+
+         <!--
+            On spécifie la version du plugin Maven pour Sonar
+         -->
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>${sonar-maven-plugin.version}</version>
+         </plugin>
+
+
+         <!--
+         Pour la gestion des release
+         -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>${maven-release-plugin.version}</version>
+            <configuration>
+               <preparationGoals>clean javadoc:jar install</preparationGoals>
+               <autoVersionSubmodules>true</autoVersionSubmodules>
+               <useReleaseProfile>false</useReleaseProfile>
+            </configuration>
+         </plugin>
+
+         <!-- Configuration mémoire pour les TU -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <argLine>-Xmx700m -XX:MaxPermSize=700m -verbose:gc -XX:+UseSerialGC -XX:-UseConcMarkSweepGC</argLine>
+            </configuration>
+         </plugin>
+
+      </plugins>
+
+
+      <pluginManagement>
+
+         <plugins>
+
+            <!-- COMPILATION ASPECT -->
+            <plugin>
+               <groupId>org.codehaus.mojo</groupId>
+               <artifactId>aspectj-maven-plugin</artifactId>
+               <version>${aspectj-maven-plugin.version}</version>
+               <configuration>
+                  <source>1.6</source>
+                  <Xlint>ignore</Xlint>
+               </configuration>
+               <executions>
+                  <execution>
+                     <goals>
+                        <goal>compile</goal>
+                        <goal>test-compile</goal>
+                     </goals>
+                  </execution>
+               </executions>
+            </plugin>
+
+         </plugins>
+
+      </pluginManagement>
+
+   </build>
+  
+  
   <dependencies>
 	<dependency>
 	  <groupId>me.prettyprint</groupId>
